1.6.9
- Added sorting to bags and bank
    - Also for bags the option to sort to first or last bag (cogwheel at the bag)
- Added option the set the Stancebar to the left or right of the Actionbar

1.6.8
- Fix lua error in BG's for level 60 chars

1.6.7
- Redo Inventory to work with the keyring

1.6.6
- Fix a bug in bankframes

1.6.5
- Added Keyring

1.6.4
- Update libs
- Error if acception an PvP invite: Workaround: If the invite pops up type /reload then you can accept the invite
- Added BG queue icon

1.6.3
- Fix lua error for druids

1.6.2
- Added Questtarget to the Immersive dialoge (At the End)
- Changed Bag and Bank min sizing
- Changed target debuffs to 8 per row
- Added option under Skins 'Use Blizzard Class Colors'
- Added Defense stat for Warrior, Druid and Paladin

1.6.1
- Update libs

1.6.0
- Added Honortab

1.5.0
- Fix chatframe moving and resizing error
- Update libs

1.4.0
- Added advanced char stats (hover over the 'Attribute'-label)
- Change lib from LibClassicHealComm-1.0 to LibHealComm-4.0
- Added pet level to pet frame
- Update libs

1.3.0

- Make lootframe moveable (if not hooked under mouse)
- Added a 'Skin'-Tab into settings

1.2.1

- Fix a position error with the MultiBarBottomRight
- Fix a tooltip error with resistence tooltips
- Update libs

1.2.0

- Added custom UIDropDownMenu
- Added repu background for Wildhammer Clan
- Change range indicator for Multibars
- Make XP-Bar as a module

1.1.0

- Tooltip now anchor to the bottom right of the Tooltip mover frame
- Added custom mainmenu
- Added custom loot frame
- Added custom staticpopup
- Added Pet diet info
- Update libs


1.0.0

- Added Character Panel
- Added Talent Panel
- Added Spellbook
- Added level to QuestTracker
- Added back Searchbar to bag and bank
- Added Welcome- and Changelog Page
- Added TitanClassic Support (MultiBarRight should not move a bit down)
- Fix MultiBarLeft and Right finally (also when get attack in stealth)
- Added back Chatwindow
- Added back Dynamic-Cam Mode