@@ -252,4 +252,6 @@ GW_DEFAULT["DROPDOWNLIST_SKIN_ENABLED"] = true
 GW_DEFAULT["DROPDOWNMENU_SKIN_ENABLED"] = true
 GW_DEFAULT["BLIZZARDCLASSCOLOR_ENABLED"] = false
 
+GW_DEFAULT["SORT_BAGS_RIGHT_TO_LEFT"] = false
+
 GW_DEFAULT["ACTIVE_PROFILE"] = nil
