@@ -2,6 +2,7 @@
 - Added sorting to bags and bank
     - Also for bags the option to sort to first or last bag (cogwheel at the bag)
 - Added option the set the Stancebar to the left or right of the Actionbar
+- Fix short freeze when open bag or bank
 
 1.6.8
 - Fix lua error in BG's for level 60 chars
